--- a/package.json
+++ b/package.json
@@ -12,5 +12,11 @@
     "sass": "^1.63.3",
     "typescript": "^5.0.2",
     "vite": "^4.3.9"
+  },
+  "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.13.5"
   }
 }
