--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.11.16",
-    "@mui/material": "^5.13.5"
+    "@mui/material": "^5.13.5",
+    "typed.js": "^2.0.16",
+    "typewriter-effect": "^2.20.1"
   }
 }
